--- a/index.html
+++ b/index.html
@@ -1,15 +1,61 @@
 <!doctype html>
-<html lang="en">
+<html lang="fa" dir="rtl">
 
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title></title>
+  <!-- SEO meta tags -->
+  <meta name="robots" content="index, follow">
+  <link rel="canonical" href="https://www.Exiness.ir" />
+  <!-- Open Graph Meta Tags -->
+  <meta property="og:locale" content="fa_IR" />
+  <meta property="og:type" content="website" />
+  <meta property="og:title" content="EXINESS" />
+  <meta property="og:description" content="A short description of your page." />
+  <meta property="og:url" content="https://www.Exiness.ir" />
+  <meta property="og:site_name" content="Exiness" />
+  <meta property="og:image" content="https://www.example.com/image.jpg" />
+  <meta property="og:image:width" content="1200" />
+  <meta property="og:image:height" content="630" />
+  <!-- Twitter Card Meta Tags -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="Exiness website" />
+  <meta name="twitter:description" content="A short description of your page." />
+  <meta name="twitter:image" content="https://www.example.com/image.jpg" />
+  <meta name="twitter:site" content="@yourtwitterhandle" />
+  <meta name="twitter:creator" content="@yourtwitterhandle" />
+  <meta name="twitter:label1" content="Category" />
+  <meta name="twitter:data1" content="Tech" />
+  <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "Article",
+      "headline": "What is Schema.org and How to Use It?",
+      "author": {
+        "@type": "Person",
+        "name": "John Doe"
+      },
+      "datePublished": "2024-02-02",
+      "dateModified": "2024-02-02",
+      "mainEntityOfPage": {
+        "@type": "WebPage",
+        "@id": "https://example.com/schema-guide"
+      },
+      "publisher": {
+        "@type": "Organization",
+        "name": "Example Blog",
+        "logo": {
+          "@type": "ImageObject",
+          "url": "https://example.com/logo.png"
+        }
+      }
+    }
+    </script>
+  <title>Exiness</title>
   <link rel="stylesheet" href="./src/style/style.css">
 </head>
 
 <body>
-  <h1 class="text-5xl">hell</h1>
   <script type="module" src="/src/main.js"></script>
 </body>
 
