--- a/index.html
+++ b/index.html
@@ -56,6 +56,121 @@
 </head>
 
 <body>
+  <header class="shadow-header">
+    <div class="container flex items-center justify-between py-[20px]">
+      <!-- brand -->
+      <section class="order-2 col-span-2 lg:col-span-1 lg:order-1 grid place-items-center">
+        <a href="#" itemprop="url">
+          <img class="w-[180px]" src="./src/assets/img/logo/EXINESS.png" alt="logo EXINESS">
+        </a>
+      </section>
+      <!-- navbar -->
+      <nav id="navbar"
+        class="lg:col-span-2 translate-x-[100%] duration-400 z-50 fixed top-0 right-0 bottom-0 bg-smoky-white w-[70%] shadow-2xl lg:translate-0 lg:w-auto lg:bg-transparent lg:shadow-none lg:order-2 lg:static">
+        <!-- close menu button -->
+        <section>
+          <button id="close__button" class="lg:hidden curspor-pointer w-[50px] h-[50px]">
+            <span class="w-[45px] h-[4px] rounded-full bg-black block rotate-45"></span>
+            <span class="w-[45px] h-[4px] rounded-full bg-black block -rotate-45"></span>
+          </button>
+        </section>
+        <ul class="text-sm lg:flex lg:items-center lg:justify-center lg:gap-x-8">
+          <li>
+            <a href="#">صفحه اصلی</a>
+          </li>
+          <li>
+            <a href="#">خدمات</a>
+          </li>
+          <li>
+            <a href="#">نمونه کار</a>
+          </li>
+          <li>
+            <a href="#">وبلاگ</a>
+          </li>
+          <li>
+            <a href="#">درباره ما</a>
+          </li>
+          <li>
+            <a href="#">تماس با ما</a>
+          </li>
+        </ul>
+      </nav>
+      <!-- actions -->
+      <section class="space-x-2 order-3 lg:order-3 col-span-1 flex justify-end">
+        <button class="bg-main-Purple text-smoky-white px-5 py-2 lg:px-8 lg:py-3.5 rounded-4xl">ثبت نام</button>
+        <button
+          class="bg-very-light-purple text-main-Purple border-1 border-dark-smoky px-5 py-2 lg:px-8 lg:py-3.5 rounded-4xl">ورود</button>
+      </section>
+      <!-- hamburger menu -->
+      <section class="lg:hidden order-1 text-base/1">
+        <button id="menu__button" class="space-y-2 cursor-pointer">
+          <span class="w-[45px] h-[4px] rounded-full bg-black block"></span>
+          <span class="w-[45px] h-[4px] rounded-full bg-black block"></span>
+          <span class="w-[45px] h-[4px] rounded-full bg-black block"></span>
+        </button>
+      </section>
+    </div>
+  </header>
+  <main>
+    <!-- hero-section -->
+    <section>
+      <div class="container py-12 lg:flex lg:justify-between">
+        <!-- title -->
+        <div class="flex flex-col">
+          <!-- main title -->
+          <div class="order-1 mb-3 lg:mb-10">
+            <h2 class="text-[33px] font-medium text-center">
+              <span class="font-shahrzad text-main-Purple">؛</span>راهکارهای
+              <span class="text-main-Purple">دیجیتال</span> برای
+              <span class="text-main-Purple">رشد</span>
+              کسب‌وکار شما در
+            </h2>
+          </div>
+          <!-- name -->
+          <h1
+            class="[text-shadow:var(--shadow-hero-shadow)] order-2 font-black text-[60px] text-center lg:text-[78px] mb-5 lg:mb-6">
+            EXINESS <span class="font-black px-2"> | </span> اکسینس</h1>
+          <!-- sh -->
+          <p class="order-4 font-bold text-2xl text-center leading-[47px] mb-9">اکسینس تحولی در بیزنس <br> EXINESS
+            Revelotion In Business</p>
+          <!-- img -->
+          <div class="space-y-4 lg:hidden order-3 mb-6">
+            <div class="flex items-center space-x-4">
+              <img class="w-1/2" src="./src/assets/img/Rectangle/Rectangle-p.png" alt="Rectangle">
+              <img class="w-1/2" src="./src/assets/img/Rectangle/Rectangle-light-p.png" alt="Rectangle">
+            </div>
+            <div class="flex items-center space-x-4">
+              <img class="w-1/2" src="./src/assets/img/Rectangle/Rectangle-light-p.png" alt="Rectangle">
+              <img class="w-1/2" src="./src/assets/img/Rectangle/Rectangle-p.png" alt="Rectangle">
+            </div>
+          </div>
+          <!-- actions -->
+          <div class="space-x-8 text-center order-5">
+            <button class="bg-main-Purple text-smoky-white rounded-full px-9 py-4.5 text-xl cursor-pointer">همین حالا
+              شروع کنید</button>
+            <button
+              class="bg-very-light-purple text-main-Purple  border-1 border-dark-smoky rounded-full px-9 py-4.5 text-xl cursor-pointer">دریافت
+              مشاوره رایگان</button>
+          </div>
+        </div>
+        <!-- img -->
+        <div class="space-y-4 hidden lg:block">
+          <div class="flex items-center space-x-4">
+            <img class="w-1/2" src="./src/assets/img/Rectangle/Rectangle-p.png" alt="Rectangle">
+            <img class="w-1/2" src="./src/assets/img/Rectangle/Rectangle-light-p.png" alt="Rectangle">
+          </div>
+          <div class="flex items-center space-x-4">
+            <img class="w-1/2" src="./src/assets/img/Rectangle/Rectangle-light-p.png" alt="Rectangle">
+            <img class="w-1/2" src="./src/assets/img/Rectangle/Rectangle-p.png" alt="Rectangle">
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- Collaboration -->
+     <section>
+      
+     </section>
+  </main>
   <script type="module" src="/src/main.js"></script>
 </body>
 
