--- a/index.html
+++ b/index.html
@@ -61,66 +61,87 @@
       <!-- brand -->
       <section class="order-2 col-span-2 lg:col-span-1 lg:order-1 grid place-items-center">
         <a href="#" itemprop="url">
-          <img class="w-[180px]" src="./src/assets/img/logo/EXINESS.png" alt="logo EXINESS">
+          <img class="w-[140px] md:w-[180px]" src="./src/assets/img/logo/EXINESS.png" alt="logo EXINESS">
         </a>
       </section>
       <!-- navbar -->
       <nav id="navbar"
-        class="lg:col-span-2 translate-x-[100%] duration-400 z-50 fixed top-0 right-0 bottom-0 bg-smoky-white w-[70%] shadow-2xl lg:translate-0 lg:w-auto lg:bg-transparent lg:shadow-none lg:order-2 lg:static">
+        class="lg:col-span-2 shadow-2xl duration-400 lg:duration-0 translate-x-[120%] z-50 fixed top-0 md:-right-4 -right-2 bottom-0 h-full w-[50%] md:w-[30%] rounded-tl-full rounded-bl-full border-8  border-white bg-main-Purple lg:translate-0 lg:w-auto lg:bg-transparent lg:shadow-none lg:order-2 lg:static">
         <!-- close menu button -->
-        <section>
-          <button id="close__button" class="lg:hidden curspor-pointer w-[50px] h-[50px]">
-            <span class="w-[45px] h-[4px] rounded-full bg-black block rotate-45"></span>
-            <span class="w-[45px] h-[4px] rounded-full bg-black block -rotate-45"></span>
+        <section class="lg:hidden relative top-[45%] -translate-y-1/2">
+          <button id="close__button"
+            class="absolute -left-8 lg:hidden cursor-pointer p-5 bg-main-Purple rounded-tl-full rounded-bl-full flex items-center justify-center">
+            <img class="w-[30px] h-[30px]" src="./src/assets/img/icons/header/close.png" alt="close button">
           </button>
         </section>
-        <ul class="text-sm lg:flex lg:items-center lg:justify-center lg:gap-x-8">
-          <li>
-            <a href="#">صفحه اصلی</a>
+        <ul
+          class="text-md pr-6 pl-8 pt-32 lg:pr-0 lg:pl-0 lg:px-0 lg:pt-0 lg:flex lg:items-center lg:justify-center lg:gap-x-8">
+          <li class="lg:hidden mb-10">
+            <a href="#">
+              <img class="w-[130px]" src="./src/assets/img/logo/EXINESS.png" alt="exinnes logo">
+            </a>
           </li>
-          <li>
+          <li class=" text-white my-7 lg:my-0 lg:text-black">
+            <div class="flex items-center gap-x-3 lg:block pb-6 lg:pb-0">
+              <img class="lg:hidden w-[20px]" src="./src/assets/img/icons/header/home.png" alt="">
+              <a href="#">صفحه اصلی</a>
+            </div>
+            <span class="lg:hidden block w-full h-[4px] bg-gradient-to-r from-white/0 to-white"></span>
+          </li>
+          <li class="flex items-center gap-x-3 lg:block text-white my-7 lg:my-0 lg:text-black">
+            <img class="lg:hidden w-[20px]" src="./src/assets/img/icons/header/archive.png" alt="">
             <a href="#">خدمات</a>
           </li>
-          <li>
+          <li class="flex items-center gap-x-3 lg:block text-white my-7 lg:my-0 lg:text-black">
+            <img class="lg:hidden w-[20px]" src="./src/assets/img/icons/header/star.png" alt="">
             <a href="#">نمونه کار</a>
           </li>
-          <li>
+          <li class="flex items-center gap-x-3 lg:block text-white my-7 lg:my-0 lg:text-black">
+            <img class="lg:hidden w-[20px]" src="./src/assets/img/icons/header/blogs.png" alt="">
             <a href="#">وبلاگ</a>
           </li>
-          <li>
+          <li class="flex items-center gap-x-3 lg:block text-white my-7 lg:my-0 lg:text-black">
+            <img class="lg:hidden w-[20px]" src="./src/assets/img/icons/header/about.png" alt="">
             <a href="#">درباره ما</a>
           </li>
-          <li>
+          <li class="flex items-center gap-x-3 lg:block text-white my-7 lg:my-0 lg:text-black">
+            <img class="lg:hidden w-[20px]" src="./src/assets/img/icons/header/contact.png" alt="">
             <a href="#">تماس با ما</a>
           </li>
         </ul>
       </nav>
       <!-- actions -->
       <section class="space-x-2 order-3 lg:order-3 col-span-1 flex justify-end">
-        <button class="bg-main-Purple text-smoky-white px-5 py-2 lg:px-8 lg:py-3.5 rounded-4xl">ثبت نام</button>
+        <button class="bg-main-Purple text-smoky-white px-2 py-1.5 md:px-5 md:py-2 lg:px-8 lg:py-3.5 rounded-4xl">ثبت
+          نام</button>
         <button
-          class="bg-very-light-purple text-main-Purple border-1 border-dark-smoky px-5 py-2 lg:px-8 lg:py-3.5 rounded-4xl">ورود</button>
+          class="bg-very-light-purple text-main-Purple border-1 border-dark-smoky px-2 py-1.5 md:px-5 md:py-2  lg:px-8 lg:py-3.5 rounded-4xl">ورود</button>
       </section>
       <!-- hamburger menu -->
       <section class="lg:hidden order-1 text-base/1">
-        <button id="menu__button" class="space-y-2 cursor-pointer">
-          <span class="w-[45px] h-[4px] rounded-full bg-black block"></span>
-          <span class="w-[45px] h-[4px] rounded-full bg-black block"></span>
-          <span class="w-[45px] h-[4px] rounded-full bg-black block"></span>
+        <button id="menu__button" class="space-y-1 md:space-y-1.5 cursor-pointer">
+          <span class="w-[27px] md:w-[45px] h-[4px] rounded-full bg-black block"></span>
+          <span class="w-[27px] md:w-[45px] h-[4px] rounded-full bg-black block"></span>
+          <span class="w-[27px] md:w-[45px] h-[4px] rounded-full bg-black block"></span>
         </button>
       </section>
     </div>
   </header>
+
+
+
+
+
   <main>
     <!-- hero-section -->
     <section>
-      <div class="container py-12 lg:flex lg:justify-between">
+      <div class="container py-14 lg:grid lg:grid-cols-2 lg:gap-x-12">
         <!-- title -->
-        <div class="flex flex-col">
+        <div class="w-full flex flex-col">
           <!-- main title -->
-          <div class="order-1 mb-3 lg:mb-10">
-            <h2 class="text-[33px] font-medium text-center">
-              <span class="font-shahrzad text-main-Purple">؛</span>راهکارهای
+          <div class="order-1 mb-3 lg:mb-6 xl:mb-10">
+            <h2 class=" text-[22px] md:text-[30px] lg:text-[25px] font-medium text-center">
+              <span class=" font-shahrzad text-main-Purple text-5xl">؛</span>راهکارهای
               <span class="text-main-Purple">دیجیتال</span> برای
               <span class="text-main-Purple">رشد</span>
               کسب‌وکار شما در
@@ -128,44 +149,163 @@
           </div>
           <!-- name -->
           <h1
-            class="[text-shadow:var(--shadow-hero-shadow)] order-2 font-black text-[60px] text-center lg:text-[78px] mb-5 lg:mb-6">
+            class="[text-shadow:var(--shadow-hero-shadow)] order-2 font-black text-[40px] md:text-[60px] text-center lg:text-[50px] xl:text-[70px] mb-5 lg:mb-4 xl:mb-6">
             EXINESS <span class="font-black px-2"> | </span> اکسینس</h1>
           <!-- sh -->
-          <p class="order-4 font-bold text-2xl text-center leading-[47px] mb-9">اکسینس تحولی در بیزنس <br> EXINESS
+          <p class="order-4 font-bold text-xl md:text-2xl text-center leading-[40px] md:leading-[47px] mb-9">اکسینس
+            تحولی در بیزنس <br> EXINESS
             Revelotion In Business</p>
           <!-- img -->
-          <div class="space-y-4 lg:hidden order-3 mb-6">
-            <div class="flex items-center space-x-4">
+          <div class="space-y-4 text-center lg:hidden order-3 mb-6 w-full">
+            <div class="flex items-center gap-x-4 w-full pl-4">
               <img class="w-1/2" src="./src/assets/img/Rectangle/Rectangle-p.png" alt="Rectangle">
               <img class="w-1/2" src="./src/assets/img/Rectangle/Rectangle-light-p.png" alt="Rectangle">
             </div>
-            <div class="flex items-center space-x-4">
+            <div class="flex items-center gap-x-4 w-full pl-4">
               <img class="w-1/2" src="./src/assets/img/Rectangle/Rectangle-light-p.png" alt="Rectangle">
               <img class="w-1/2" src="./src/assets/img/Rectangle/Rectangle-p.png" alt="Rectangle">
             </div>
           </div>
           <!-- actions -->
-          <div class="space-x-8 text-center order-5">
-            <button class="bg-main-Purple text-smoky-white rounded-full px-9 py-4.5 text-xl cursor-pointer">همین حالا
+          <div
+            class="space-x-4 md:space-x-8 text-center order-5 grid grid-cols-2 lg:flex lg:items-center lg:justify-center">
+            <button
+              class="bg-main-Purple text-smoky-white rounded-full px-5 py-2 md:px-9 md:py-4.5 text-md md:text-xl font-bold cursor-pointer">همین
+              حالا
               شروع کنید</button>
             <button
-              class="bg-very-light-purple text-main-Purple  border-1 border-dark-smoky rounded-full px-9 py-4.5 text-xl cursor-pointer">دریافت
+              class="bg-very-light-purple text-main-Purple border-1 border-dark-smoky rounded-full px-5 py-2 md:px-9 md:py-4.5 text-md font-bold dm:text-xl cursor-pointer">دریافت
               مشاوره رایگان</button>
           </div>
         </div>
         <!-- img -->
         <div class="space-y-4 hidden lg:block">
-          <div class="flex items-center space-x-4">
+          <div class="flex items-center gap-x-4 w-full pl-4">
             <img class="w-1/2" src="./src/assets/img/Rectangle/Rectangle-p.png" alt="Rectangle">
             <img class="w-1/2" src="./src/assets/img/Rectangle/Rectangle-light-p.png" alt="Rectangle">
           </div>
-          <div class="flex items-center space-x-4">
+          <div class="flex items-center gap-x-4 w-full pl-4">
             <img class="w-1/2" src="./src/assets/img/Rectangle/Rectangle-light-p.png" alt="Rectangle">
             <img class="w-1/2" src="./src/assets/img/Rectangle/Rectangle-p.png" alt="Rectangle">
           </div>
         </div>
       </div>
     </section>
+    <!-- Collaborate. -->
+    <section>
+      <div class="container pt-4 lg:pt-12 mb-24">
+        <div class="text-center mb-7">
+          <h2 class="font-bold text-lg lg:text-2xl">
+            <span class=" font-shahrzad text-main-Purple text-5xl">؛</span>
+            برند هایی که با ما همکاری کردند
+          </h2>
+        </div>
+
+        <div class="overflow-hidden dir-ltr whitespace-nowrap">
+          <div class="inline-block dir-ltr space-x-16 animate-logo-slide">
+            <img class="inline w-[70px]" src="./src/assets/img/Collaboration/bejocam black.svg" alt="">
+            <img class="inline w-[70px]" src="./src/assets/img/Collaboration/bumoona black.svg" alt="">
+            <img class="inline w-[70px]" src="./src/assets/img/Collaboration/home louk black.svg" alt="">
+            <img class="inline w-[70px]" src="./src/assets/img/Collaboration/nightway black.svg" alt="">
+            <img class="inline w-[70px]" src="./src/assets/img/Collaboration/Paytabom black.svg" alt="">
+            <img class="inline w-[70px]" src="./src/assets/img/Collaboration/pizo black.svg" alt="">
+            <img class="inline w-[70px]" src="./src/assets/img/Collaboration/sciepole black.svg" alt="">
+            <img class="inline w-[70px]" src="./src/assets/img/Collaboration/spacrea black.svg" alt="">
+            <img class="inline w-[70px]" src="./src/assets/img/Collaboration/tobama black.svg" alt="">
+            <img class="inline w-[70px]" src="./src/assets/img/Collaboration/viravall black.svg" alt="">
+            <img class="inline w-[70px]" src="./src/assets/img/Collaboration/weura black.svg" alt="">
+          </div>
+          <div class="inline-block dir-ltr space-x-16 animate-logo-slide">
+            <img class="inline w-[70px]" src="./src/assets/img/Collaboration/bejocam black.svg" alt="">
+            <img class="inline w-[70px]" src="./src/assets/img/Collaboration/bumoona black.svg" alt="">
+            <img class="inline w-[70px]" src="./src/assets/img/Collaboration/home louk black.svg" alt="">
+            <img class="inline w-[70px]" src="./src/assets/img/Collaboration/nightway black.svg" alt="">
+            <img class="inline w-[70px]" src="./src/assets/img/Collaboration/Paytabom black.svg" alt="">
+            <img class="inline w-[70px]" src="./src/assets/img/Collaboration/pizo black.svg" alt="">
+            <img class="inline w-[70px]" src="./src/assets/img/Collaboration/sciepole black.svg" alt="">
+            <img class="inline w-[70px]" src="./src/assets/img/Collaboration/spacrea black.svg" alt="">
+            <img class="inline w-[70px]" src="./src/assets/img/Collaboration/tobama black.svg" alt="">
+            <img class="inline w-[70px]" src="./src/assets/img/Collaboration/viravall black.svg" alt="">
+            <img class="inline w-[70px]" src="./src/assets/img/Collaboration/weura black.svg" alt="">
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- about exiness -->
+    <section>
+      <div class="container pb-12">
+        <h2 class="font-bold text-3xl text-center mb-14">
+          <span class="font-shahrzad text-main-Purple text-4xl pl-2">؛</span>
+          درباره
+          <span class="text-main-Purple">اکسینس</span>
+        </h2>
+        <div class="lg:grid lg:grid-cols-2 lg:gap-x-7">
+          <div class="grid grid-cols-3 lg:block">
+            <img class="col-span-2 sm:mb-6 md:mb-10 lg:mb-0" src="./src/assets/img/about-team/about-team-img.png" alt="about team img">
+
+            <div class="grid grid-rows-3 lg:hidden items-center text-center space-y-4 pt-4 mb-5">
+              <div class="flex flex-col items-center">
+                <h2 class="font-semibold text-2xl sm:text-4xl md:text-5xl">
+                  <span class="text-main-Purple">+</span>
+                  100
+                </h2>
+                <p class="font-medium text-sm sm:text-lg md:text-xl">مشتریان راضی</p>
+              </div>
+              <div class="flex flex-col items-center ">
+                <h2 class="font-semibold text-2xl sm:text-4xl md:text-5xl">
+                  <span class="text-main-Purple">+</span>200</h2>
+                <p class="font-medium text-sm sm:text-lg md:text-xl">پروژه های موفق</p>
+              </div>
+              <div class="flex flex-col items-center ">
+                <h2 class="font-semibold text-2xl sm:text-4xl md:text-5xl">
+                  <span class="text-main-Purple">+</span>5K</h2>
+                <p class="font-medium text-sm sm:text-lg md:text-xl">کاربران فعال</p>
+              </div>
+            </div>
+          </div>
+
+          <div class="lg:pl-4 lg:pt-8 flex flex-col">
+            <h2 class="font-bold text-2xl mb-4 sm:mb-6 md:mb-7 lg:mb-8 text-center lg:text-right sm:text-3xl ">
+              <span class="font-shahrzad text-main-Purple text-4xl">؛</span>
+              تجربه و نوآوری در کنار هم
+            </h2>
+            <p class="font-medium text-md sm:text-xl mb-6 md:mb-8 lg:mb-14 text-center lg:text-right">
+              لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ، و با استفاده از طراحان گرافیک است، چاپگرها و
+              متون بلکه روزنامه و مجله در ستون و سطرآنچنان که لازم است.
+            </p>
+
+            <div class="lg:flex items-center text-center space-x-16 mb-9 hidden ">
+              <div class="flex flex-col items-center ">
+                <h2 class="font-semibold text-4xl lg:flex lg:items-center lg:gap-x-2">
+                  <span class="text-main-Purple">+</span>
+                  100
+                </h2>
+                <p class="font-medium text-sm">مشتریان راضی</p>
+              </div>
+              <div class="flex flex-col items-center ">
+                <h2 class="font-semibold text-4xl lg:flex lg:items-center lg:gap-x-2"><span class="text-main-Purple">+</span>200</h2>
+                <p class="font-medium text-sm">پروژه های موفق</p>
+              </div>
+              <div class="flex flex-col items-center ">
+                <h2 class="font-semibold text-4xl lg:flex lg:items-center lg:gap-x-2"><span class="text-main-Purple">+</span>5K</h2>
+                <p class="font-medium text-sm">کاربران فعال</p>
+              </div>
+            </div>
+
+            <div class="text-center lg:text-right">
+              <button
+                class="font-semibold text-smoky-white bg-main-Purple px-6 py-3 rounded-3xl sm:text-xl">برای
+                دریافت مشاوره
+                رایگان کلیک کنید.</button>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- EXINESS lines -->
+     <section>
+      
+     </section>
   </main>
   <script type="module" src="/src/main.js"></script>
 </body>
