--- a/index.html
+++ b/index.html
@@ -241,7 +241,8 @@
         </h2>
         <div class="lg:grid lg:grid-cols-2 lg:gap-x-7">
           <div class="grid grid-cols-3 lg:block">
-            <img class="col-span-2 sm:mb-6 md:mb-10 lg:mb-0" src="./src/assets/img/about-team/about-team-img.png" alt="about team img">
+            <img class="col-span-2 sm:mb-6 md:mb-10 lg:mb-0" src="./src/assets/img/about-team/about-team-img.png"
+              alt="about team img">
 
             <div class="grid grid-rows-3 lg:hidden items-center text-center space-y-4 pt-4 mb-5">
               <div class="flex flex-col items-center">
@@ -253,12 +254,14 @@
               </div>
               <div class="flex flex-col items-center ">
                 <h2 class="font-semibold text-2xl sm:text-4xl md:text-5xl">
-                  <span class="text-main-Purple">+</span>200</h2>
+                  <span class="text-main-Purple">+</span>200
+                </h2>
                 <p class="font-medium text-sm sm:text-lg md:text-xl">پروژه های موفق</p>
               </div>
               <div class="flex flex-col items-center ">
                 <h2 class="font-semibold text-2xl sm:text-4xl md:text-5xl">
-                  <span class="text-main-Purple">+</span>5K</h2>
+                  <span class="text-main-Purple">+</span>5K
+                </h2>
                 <p class="font-medium text-sm sm:text-lg md:text-xl">کاربران فعال</p>
               </div>
             </div>
@@ -283,18 +286,19 @@
                 <p class="font-medium text-sm">مشتریان راضی</p>
               </div>
               <div class="flex flex-col items-center ">
-                <h2 class="font-semibold text-4xl lg:flex lg:items-center lg:gap-x-2"><span class="text-main-Purple">+</span>200</h2>
+                <h2 class="font-semibold text-4xl lg:flex lg:items-center lg:gap-x-2"><span
+                    class="text-main-Purple">+</span>200</h2>
                 <p class="font-medium text-sm">پروژه های موفق</p>
               </div>
               <div class="flex flex-col items-center ">
-                <h2 class="font-semibold text-4xl lg:flex lg:items-center lg:gap-x-2"><span class="text-main-Purple">+</span>5K</h2>
+                <h2 class="font-semibold text-4xl lg:flex lg:items-center lg:gap-x-2"><span
+                    class="text-main-Purple">+</span>5K</h2>
                 <p class="font-medium text-sm">کاربران فعال</p>
               </div>
             </div>
 
             <div class="text-center lg:text-right">
-              <button
-                class="font-semibold text-smoky-white bg-main-Purple px-6 py-3 rounded-3xl sm:text-xl">برای
+              <button class="font-semibold text-smoky-white bg-main-Purple px-6 py-3 rounded-3xl sm:text-xl">برای
                 دریافت مشاوره
                 رایگان کلیک کنید.</button>
             </div>
@@ -303,9 +307,19 @@
       </div>
     </section>
     <!-- EXINESS lines -->
-     <section>
-      
-     </section>
+    <section>
+      <div class="container">
+        <div>
+          <div>
+            <img src="./src/assets/img/logo/exiness lines/exin.png" alt="exin logo brand">
+            <h2>لاینEXIN</h2>
+          </div>
+          <p>لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ، و با استفاده از طراحان گرافیک است، چاپگرها و
+            متون بلکه روزنامه و مجله در ستون و سطرآنچنان که لازم است.چاپگرها و متون بلکه روزنامه و مجله در ستون و
+            سطرآنچنان که لازم است.</p>
+        </div>
+      </div>
+    </section>
   </main>
   <script type="module" src="/src/main.js"></script>
 </body>
