--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
           </li>
           <li class="flex items-center gap-x-3 lg:block text-white my-7 lg:my-0 lg:text-black">
             <img class="lg:hidden w-[20px]" src="./src/assets/img/icons/header/star.png" alt="">
-            <a href="#">نمونه کار</a>
+            <a href="#">همکاران</a>
           </li>
           <li class="flex items-center gap-x-3 lg:block text-white my-7 lg:my-0 lg:text-black">
             <img class="lg:hidden w-[20px]" src="./src/assets/img/icons/header/blogs.png" alt="">
@@ -233,7 +233,7 @@
     </section>
     <!-- about exiness -->
     <section>
-      <div class="container pb-12">
+      <div class="container pb-12 mb-24">
         <h2 class="font-bold text-3xl text-center mb-14">
           <span class="font-shahrzad text-main-Purple text-4xl pl-2">؛</span>
           درباره
@@ -308,16 +308,183 @@
     </section>
     <!-- EXINESS lines -->
     <section>
-      <div class="container">
-        <div>
-          <div>
-            <img src="./src/assets/img/logo/exiness lines/exin.png" alt="exin logo brand">
-            <h2>لاینEXIN</h2>
+      <div class="container mb-10 lg:mb-18">
+        <h2 class="font-bold text-3xl text-center mb-14">
+          <span class="font-shahrzad text-main-Purple text-4xl pl-2">؛</span>
+          لاین های
+          <span class="text-main-Purple">اکسینس</span>
+        </h2>
+
+        <div class="grid grid-cols-1 gap-y-6 md:grid-cols-2 md:gap-x-6">
+          <div class="bg-main-Purple rounded-3xl px-8 py-10 md:px-10 md:py-14">
+            <div class="flex items-center space-x-4 pb-6">
+              <img class="w-[50px] bg-white rounded-xl" src="./src/assets/img/logo/exiness lines/exin.png"
+                alt="exin brand logo">
+              <h2 class="font-bold text-2xl text-smoky-white">لاینEXIN</h2>
+            </div>
+            <p class="text-sec-smoky-white font-normal text-sm md:text-lg">لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم
+              از
+              صنعت چاپ، و
+              با استفاده از طراحان گرافیک است، چاپگرها و
+              متون بلکه روزنامه و مجله در ستون و سطرآنچنان که لازم است.چاپگرها و متون بلکه روزنامه و مجله در ستون و
+              سطرآنچنان که لازم است.</p>
           </div>
-          <p>لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ، و با استفاده از طراحان گرافیک است، چاپگرها و
-            متون بلکه روزنامه و مجله در ستون و سطرآنچنان که لازم است.چاپگرها و متون بلکه روزنامه و مجله در ستون و
-            سطرآنچنان که لازم است.</p>
+
+          <div class="bg-main-Purple rounded-3xl px-8 py-10 md:px-10 md:py-14">
+            <div class="flex items-center space-x-4 pb-6">
+              <img class="w-[50px] rounded-xl" src="./src/assets/img/logo/exiness lines/eness.png"
+                alt="eness brand logo">
+              <h2 class="font-bold text-2xl text-smoky-white">لاینENESS</h2>
+            </div>
+            <p class="text-sec-smoky-white font-normal text-sm md:text-lg">لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم
+              از
+              صنعت چاپ، و
+              با استفاده از طراحان گرافیک است، چاپگرها و
+              متون بلکه روزنامه و مجله در ستون و سطرآنچنان که لازم است.چاپگرها و متون بلکه روزنامه و مجله در ستون و
+              سطرآنچنان که لازم است.</p>
+          </div>
         </div>
+      </div>
+    </section>
+    <!-- services -->
+    <section>
+      <div class="container mb-24">
+        <div class="grid grid-cols-2 grid-rows-5 gap-3">
+          <div class="col-span-2 bg-sec-smoky-white rounded-3xl border-1 border-dark-smoky py-5 md:py-12 lg:py-14">
+            <h2 class="font-bold text-xl md:text-2xl text-center pb-2 md:pb-4">
+              <span class="font-shahrzad text-main-Purple text-4xl pl-1">؛</span>
+              خدمات <span class="text-main-Purple">مشاوره ای</span> اکسینس
+            </h2>
+            <p class="text-center text-paragraph font-medium text-sm md:text-lg pb-5">تیم حرفه ای ما طیف گسترده ای از
+              خدمات را ارائه
+              میدهد.</p>
+            <div class="text-center space-x-4 mb-4">
+              <button
+                class="bg-main-Purple text-smoky-white text-sm font-normal px-6 py-2 md:text-lg rounded-3xl">مشاهده
+                بیشتر</button>
+              <button
+                class="text-main-Purple bg-smoky-white border-1 border-dark-smoky text-sm md:text-lg font-normal px-6 py-2 rounded-3xl">دریافت
+                مشاوره</button>
+            </div>
+          </div>
+          <div
+            class="cols-span-1 bg-sec-smoky-white rounded-3xl border-1 border-dark-smoky px-5 py-8 pb-5 md:py-12 lg:py-14">
+            <div class="flex items-center gap-x-2 text-sm sm:text-lg md:text-xl mb-2">
+              <img src="./src/assets/img/icons/dot.png" alt="dot">
+              <h3>مشاوره بازاریابی</h3>
+            </div>
+            <p class="text-paragraph text-[12px] sm:text-sm md:text-lg">لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از
+              صنعت چاپ، و با
+              استفاده از طراحان گرافیک است.</p>
+          </div>
+          <div
+            class="cols-span-1 bg-sec-smoky-white rounded-3xl border-1 border-dark-smoky px-5 py-8 pb-5 md:py-12 lg:py-14">
+            <div class="flex items-center gap-x-2 text-sm sm:text-lg md:text-xl mb-2">
+              <img src="./src/assets/img/icons/dot.png" alt="dot">
+              <h3>مشاوره مدیریت</h3>
+            </div>
+            <p class="text-paragraph text-[12px] sm:text-sm md:text-lg">لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از
+              صنعت چاپ، و با
+              استفاده از طراحان گرافیک است.</p>
+          </div>
+          <div
+            class="col-span-2 bg-sec-smoky-white rounded-3xl border-1 border-dark-smoky px-5 py-8 pb-5 md:py-12 lg:py-14">
+            <div class="flex items-center gap-x-2 text-sm sm:text-lg md:text-xl mb-2">
+              <img src="./src/assets/img/icons/dot.png" alt="dot">
+              <h3>مشاوره فناوری اطلاعات</h3>
+            </div>
+            <p class="text-paragraph text-[12px] sm:text-sm md:text-lg">لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از
+              صنعت چاپ، و با
+              استفاده از طراحان گرافیک است.</p>
+          </div>
+          <div
+            class="col-span-1 bg-sec-smoky-white rounded-3xl border-1 border-dark-smoky px-5 py-8 pb-5 md:py-12 lg:py-14">
+            <div class="flex items-center gap-x-2 text-sm sm:text-lg md:text-xl mb-2">
+              <img src="./src/assets/img/icons/dot.png" alt="dot">
+              <h3>مشاوره منابع انسانی</h3>
+            </div>
+            <p class="text-paragraph text-[12px] sm:text-sm md:text-lg">لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از
+              صنعت چاپ، و با
+              استفاده از طراحان گرافیک است.</p>
+          </div>
+          <div
+            class="col-span-1 bg-sec-smoky-white rounded-3xl border-1 border-dark-smoky px-5 py-8 pb-5 md:py-12 lg:py-14">
+            <div class="flex items-center gap-x-2 text-sm sm:text-lg md:text-xl mb-2">
+              <img src="./src/assets/img/icons/dot.png" alt="dot">
+              <h3>مشاوره مالی </h3>
+            </div>
+            <p class="text-paragraph text-[12px] sm:text-sm md:text-lg">لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از
+              صنعت چاپ، و با
+              استفاده از طراحان گرافیک است.</p>
+          </div>
+          <div
+            class="col-span-1 bg-sec-smoky-white rounded-3xl border-1 border-dark-smoky px-5 py-8 pb-5 md:py-12 lg:py-14">
+            <div class="flex items-center gap-x-2 text-sm sm:text-lg md:text-xl mb-2">
+              <img src="./src/assets/img/icons/dot.png" alt="dot">
+              <h3>مشاوره سرمایه گذاری</h3>
+            </div>
+            <p class="text-paragraph text-[12px] sm:text-sm md:text-lg">لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از
+              صنعت چاپ، و با
+              استفاده از طراحان گرافیک است.</p>
+          </div>
+          <div
+            class="col-span-1 bg-sec-smoky-white rounded-3xl border-1 border-dark-smoky px-5 py-8 pb-5 md:py-12 lg:py-14">
+            <div class="flex items-center gap-x-2 text-sm sm:text-lg md:text-xl mb-2">
+              <img src="./src/assets/img/icons/dot.png" alt="dot">
+              <h3>مشاوره ثبت اختراع </h3>
+            </div>
+            <p class="text-paragraph text-[12px] sm:text-sm md:text-lg">لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از
+              صنعت چاپ، و با
+              استفاده از طراحان گرافیک است.</p>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- resume -->
+    <section>
+      <div class="container mb-24">
+        <h2 class="font-bold text-3xl text-center mb-6">
+          <span class="font-shahrzad text-main-Purple text-4xl pl-2">؛</span>
+          رزومه کاری
+          <span class="text-main-Purple">اکسینس</span>
+        </h2>
+
+        <div class="relative bg-smoky-white border-1 border-dark-smoky rounded-tl-3xl rounded-tr-3xl p-6">
+          <div class="">
+            <img class="w-[60px]" src="./src/assets/img/resume/resume-section-img.png" alt="">
+          </div>
+
+          <div class="bg-main">
+            <div class="flex items-center gap-x-2 mb-3">
+              <img src="./src/assets/img/icons/dot.png" alt="dot">
+              <h3 class="font-bold text-sm">درباره اکسینس</h3>
+            </div>
+            <div>
+              <p class="text-sm font-Medium inline-block text-paragraph mb-8">لورم ایپسوم متن ساختگی با تولید سادگی
+                نامفهوم از صنعت چاپ، و با استفاده از طراحان گرافیک است.لورم
+                ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ، و با استفاده از طراحان گرافیک است.</p>
+              <div class="text-center">
+                <button class="bg-main-Purple text-sec-smoky-white px-8 py-2 rounded-4xl">مشاهده رزومه اکسینس</button>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- articles -->
+    <section>
+      <div class="container mb-24">
+        <div class="flex items-center justify-between mb-10">
+          <h2 class="font-bold text-3xl">
+            <span class="font-shahrzad text-main-Purple text-4xl pl-2">؛</span>
+            آخرین مقالات
+            <span class="text-main-Purple">اکسینس</span>
+          </h2>
+          <button class="font-bold text-md bg-main-Purple text-smoky-white px-7 py-4 rounded-3xl">مشاهده بیشتر</button>
+        </div>
+
+        
+      </div>
       </div>
     </section>
   </main>
